<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:alpha="2"
    android:elevation="6dp"
    app:cardBackgroundColor="@color/purple_700">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="1dp"
        android:alpha="4"
        android:background="@color/colorCar"
        android:orientation="vertical">


        <TextView
            android:id="@+id/nomeProdut"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:text="@string/nome_do_produto"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/btndelete"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageProdutCar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/produt_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/R"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/imageProdutCar" />

        <TextView
            android:id="@+id/produtListPrecoCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="2dp"
            android:elevation="2dp"
            android:gravity="center"
            android:text="@string/_10_90"
            android:textColor="#D50000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/produt_Id" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btndelete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_cancel_24"
            app:civ_border_color="@color/hide"
            app:civ_border_width="2dp"
            app:civ_circle_background_color="@color/hide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:foregroundGravity="center"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageProdutCar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:background="@color/white"
            android:contentDescription="TODO"
            android:elevation="4dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circulo_logo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="82dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/unidadesCar"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/textUndCar" />

        <TextView
            android:id="@+id/textUndCar"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="2dp"
            android:elevation="2dp"
            android:gravity="center"
            android:text="0"
            android:textColor="#D50000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>